fix: fixed height removed from navbar due to the banner overlaping the navbar content on smaller screens

--- a/src/components/Cabecalho/Cabecalho.module.css
+++ b/src/components/Cabecalho/Cabecalho.module.css
@@ -12,7 +12,7 @@
 
   padding: 1rem 23px;
 
-  height: 58px;
+  
 }
 
 .rightHeader {
