--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,5 @@ body {
   height: 100vh;
 
 }
+
+html, body { height: 100%; }
